--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -48,3 +48,23 @@ spec:
         - containerPort: 8080
         securityContext:
           runAsUser: 1000
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: details
+  namespace: dotnet-test
+spec:
+  hosts:
+  - "*"
+  gateways:
+  - ingress-gateway
+  http:
+  - match:
+    - uri:
+        exact: /weatherforecast
+    route:
+    - destination:
+        host: details.dotnet-test.svc.cluster.local
+        port:
+          number: 8080
