--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -52,13 +52,12 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: details
-  namespace: dotnet-test
+  name: details-service
 spec:
   hosts:
   - "*"
   gateways:
-  - ingress-gateway
+  - default/ingress-gateway
   http:
   - match:
     - uri:
