--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -67,3 +67,11 @@ spec:
         host: details.workload-test.svc.cluster.local
         port:
           number: 8080
+  - match:
+    - uri:
+        exact: /health
+    route:
+    - destination:
+        host: details.workload-test.svc.cluster.local
+        port:
+          number: 8080
