--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,13 +49,13 @@ jobs:
           run: |
             docker buildx create --use
         
-            docker buildx build .\src\KubernetesSample\ \                                
+            docker buildx build \                                
               --cache-from=type=local,src=/tmp/.buildx-cache \   
               --cache-to=type=local,dest=/tmp/.buildx-cache-new \
               --tag ${{ env.RELEASE_IMAGE }} \                           
               --target release \                                 
               --push \                                           
-              .                                                  
+              .\src\KubernetesSample\                                                     
         
             rm -rf /tmp/.buildx-cache
             mv /tmp/.buildx-cache-new /tmp/.buildx-cache
