--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,33 +32,15 @@ jobs:
     - name: Login to Amazon ECR            
       id: login-ecr                        
       uses: aws-actions/amazon-ecr-login@v1
-    - name: Set up Docker Buildx                             
-      id: buildx                                             
-      uses: docker/setup-buildx-action@master                
-    - name: Docker cache layers                              
-      uses: actions/cache@v2                                 
-      with:                                                  
-        path: /tmp/.buildx-cache                             
-        key: ${{ runner.os }}-single-buildx-${{ github.sha }}
-        restore-keys: |                                      
-          ${{ runner.os }}-single-buildx                  
-          name: Build & Push Image                                                                                      
-          env:                                                                                                          
-            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}                                                       
-            RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_REVISION }}
-          run: |
-            docker buildx create --use
-        
-            docker buildx build \                                
-              --cache-from=type=local,src=/tmp/.buildx-cache \   
-              --cache-to=type=local,dest=/tmp/.buildx-cache-new \
-              --tag ${{ env.RELEASE_IMAGE }} \                           
-              --target release \                                 
-              --push \                                           
-              .\src\KubernetesSample\                                                     
-        
-            rm -rf /tmp/.buildx-cache
-            mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+    - name: Build, tag, and push image to Amazon ECR
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
+        IMAGE_TAG: ${{ env.RELEASE_REVISION }}
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     - name: Deploy to Kubernetes cluster                                                                            
       uses: kodermax/kubectl-aws-eks@master                                                                         
       env:                                                                                                          
