--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,6 +41,33 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+    - name: Set up Docker Buildx                             
+      id: buildx                                             
+      uses: docker/setup-buildx-action@master                
+    - name: Docker cache layers                              
+      uses: actions/cache@v2                                 
+      with:                                                  
+        path: /tmp/.buildx-cache                             
+        key: ${{ runner.os }}-single-buildx-${{ github.sha }}
+        restore-keys: |                                      
+          ${{ runner.os }}-single-buildx                  
+          name: Build & Push Image                                                                                      
+          env:                                                                                                          
+            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}                                                       
+            RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_REVISION }}
+          run: |
+            docker buildx create --use
+        
+            docker buildx build \                                
+              --cache-from=type=local,src=/tmp/.buildx-cache \   
+              --cache-to=type=local,dest=/tmp/.buildx-cache-new \
+              --tag ${{ env.RELEASE_IMAGE }} \                           
+              --target release \                                 
+              --push \                                           
+              ./src/KubernetesSample/                                                     
+        
+            rm -rf /tmp/.buildx-cache
+            mv /tmp/.buildx-cache-new /tmp/.buildx-cache
     - name: Deploy to Kubernetes cluster                                                                            
       uses: kodermax/kubectl-aws-eks@master                                                                         
       env:                                                                                                          
