--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -44,7 +44,7 @@ spec:
       serviceAccountName: bookinfo-details
       containers:
       - name: details
-        image: ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}
+        image: 377288124856.dkr.ecr.eu-west-1.amazonaws.com/application-example:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
