--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,7 +39,7 @@ jobs:
         ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
         IMAGE_TAG: ${{ env.RELEASE_REVISION }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./src/KubernetesSample/     
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest ./src/KubernetesSample/     
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
     - name: Deploy to Kubernetes cluster                                                                            
