--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,11 +23,12 @@ jobs:
     - name: Checkout                                  
       uses: actions/checkout@v2
     - name: Configure AWS credentials                          
-      uses: aws-actions/configure-aws-credentials@v1           
+      uses: aws-actions/configure-aws-credentials@v3         
       with:                                                    
         aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}        
         aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
+        role-to-assume: arn:aws:iam::377288124856:role/kubernetes-deploy-test
 
     - name: Login to Amazon ECR            
       id: login-ecr                        
