Add data access

--- a/src/KubernetesSample/DotnetSQLServer.Blueprint.csproj
+++ b/src/KubernetesSample/DotnetSQLServer.Blueprint.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.201.16" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.201.3" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.201.14" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-preview.1.23112.2" />
-    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="MySqlConnector" Version="2.2.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
