--- a/src/KubernetesSample/appsettings.json
+++ b/src/KubernetesSample/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SecretName": "rds!db-efa3d5c9-cd34-43fa-9fd3-85c6cff16e0d"
 }
