--- a/deployment/base/deployment.yaml
+++ b/deployment/base/deployment.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: workload-test
+  labels:
+    name: workload-test
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,7 +27,7 @@ spec:
       serviceAccountName: bookinfo-details
       containers:
       - name: details
-        image: 377288124856.dkr.ecr.eu-west-1.amazonaws.com/application-example:latest 
+        image: 377288124856.dkr.ecr.eu-west-1.amazonaws.com/application-example:cc41d035d37a616640f01da5df2941100ec024b1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
