--- a/deployment/overlays/dev/deployment.yaml
+++ b/deployment/overlays/dev/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       serviceAccountName: bookinfo-details
       containers:
       - name: details
-        image: 377288124856.dkr.ecr.eu-west-1.amazonaws.com/application-example:latest 
+        image: 377288124856.dkr.ecr.eu-west-1.amazonaws.com/application-example:cc41d035d37a616640f01da5df2941100ec024b1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
