--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,7 @@ env:
     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     AWS_REGION: ${{ secrets.AWS_REGION }}
+    AWS_IAM_ROLE: ${{ secrets.AWS_IAM_ROLE }}
     KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
     KUBE_NAMESPACE: workload-test
     ECR_REPOSITORY: application-example
@@ -31,7 +32,7 @@ jobs:
         aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}        
         aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
-        role-to-assume: kubernetes-deploy-test
+        role-to-assume: ${{ env.AWS_IAM_ROLE }}
         role-duration-seconds: 1200
         role-session-name: deployment
 
@@ -59,5 +60,3 @@ jobs:
         IMAGE_TAG: ${{ env.RELEASE_REVISION }}
       with:                                                                                                         
         args: apply -k deployment/overlays/dev -n workload-test
-        
-      
