--- a/deployment/base/deployment.yaml
+++ b/deployment/base/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       serviceAccountName: bookinfo-details
       containers:
       - name: details
-        image: 377288124856.dkr.ecr.eu-west-1.amazonaws.com/application-example:cc41d035d37a616640f01da5df2941100ec024b1
+        image: 847868761369.dkr.ecr.eu-west-1.amazonaws.com/application-example:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
