--- a/deployment/base/service.yaml
+++ b/deployment/base/service.yaml
@@ -5,16 +5,13 @@ metadata:
   labels:
     app: details
     service: details
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
 spec:
   ports:
   - port: 8080
     name: http
+  type: ClusterIP
   selector:
     app: details
-  type: LoadBalancer
-  loadBalancerClass: service.k8s.aws/nlb
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -23,4 +20,25 @@ metadata:
   labels:
     account: details
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::377288124856:role/application-access-role
+    eks.amazonaws.com/role-arn: arn:aws:iam::847868761369:role/application-access-role
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: application-ingress
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
+    alb.ingress.kubernetes.io/target-type: ip
+spec:
+  ingressClassName: alb
+  rules:
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: details
+                port:
+                  number: 8080
