Update secret configuration

--- a/deployment/base/secrets.yaml
+++ b/deployment/base/secrets.yaml
@@ -33,3 +33,34 @@ spec:
     remoteRef:
       key: rds!cluster-df3554ce-4489-45df-a698-47c0ae0d9c06
       property: password
+---
+apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
+metadata:
+  name: ssm-secretstore
+spec:
+  provider:
+    aws:
+      service: ParameterStore
+      region: eu-west-1
+      auth:
+        jwt:
+          serviceAccountRef:
+            name: bookinfo-details
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: bookinfo-ssm
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: ssm-secretstore
+    kind: SecretStore
+  target:
+    name: workload-ssm
+    creationPolicy: Owner
+  data:
+  - secretKey: cluster-endpoint
+    remoteRef:
+      key: aurora-sample/cluster-endpoint
