--- a/deployment/base/secrets.yaml
+++ b/deployment/base/secrets.yaml
@@ -64,3 +64,6 @@ spec:
   - secretKey: cluster-endpoint
     remoteRef:
       key: /aurora-serverless-sample/cluster-endpoint
+  - secretKey: db-name
+    remoteRef:
+      key: /aurora-serverless-sample/db-name
